--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-hamburgers": "^4.0.1",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.1.5",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "carbon-icons-svelte": "^11.4.0"
+  }
 }
