--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.54.0",
+    "svelte-adapter-firebase": "^0.15.0",
     "svelte-check": "^3.0.1",
     "svelte-hamburgers": "^4.0.1",
     "svelte-preprocess": "^4.10.7",
