--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "type": "module",
   "dependencies": {
     "carbon-icons-svelte": "^11.4.0",
-    "firebase": "^9.17.1"
+    "firebase": "^9.17.1",
+    "js-cookie": "^3.0.1"
   }
 }
