--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dayjs": "^1.11.7",
     "firebase": "^9.17.1",
     "js-cookie": "^3.0.1",
+    "prettier": "^2.8.3",
+    "prettier-plugin-svelte": "^2.9.0",
     "svelte-star-rating": "^2.0.1"
   }
 }
